--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ flutter:
   assets:
     - assets/icons/
     - assets/fonts/
+    - assets/riddles/
+    - assets/background/
 
   fonts:
     - family: Poppins
