--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   # Utilities
   dartz: ^0.10.1
   freezed_annotation: ^2.4.4
+  device_info_plus: ^10.0.0
+  flutter_web_auth_2: ^4.1.0
 
 dev_dependencies:
   flutter_test:
