--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  audioplayers: ^6.5.0 # Audio playback for background music
   
   # State Management - BLoC
   flutter_bloc: ^8.1.6
@@ -82,6 +83,7 @@ flutter:
     - assets/riddles/
     - assets/background/
     - assets/mascot/
+    - assets/audio/  # Add audio assets folder
 
   fonts:
     - family: Poppins
